<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="permission_title">Permission required</string>
    <string name="permission_camera">Camera permission is needed to take a picture</string>
    <string name="permission_storage">Storage permission is needed to take/save a file from/in storage</string>
    <string name="permission_contact">Contact permission is needed to get contact details to follow them</string>
    <string name="permission_gps">GPS permission is needed to get your location in and show on map</string>
    <string name="permission_calls_sms">Calls and SMS permissions are needed to send message or call for activating</string>
    <string name="expired_session">Your session has been expired, you must login again to app </string>
    <string name="warning">Warning!</string>
    <string name="request_accept">Are you sure to accept?</string>
    <string name="request_reject">Are you sure to reject?</string>
    <string name="request_button_sure">Yes, sure</string>
    <string name="dialog_complex">What is the Complex?</string>
    <string name="dialog_business">What is the Business?</string>
    <string name="dialog_invite">Please invite your friends for join to collect-up </string>
    <string name="dialog_set_admin">You won\'t be admin anymore, Are you sure to change administration? </string>
    <string name="business_desc">Register your business in business room easily for free. Locate your company, organization or shop with using the GPS.</string>
    <string name="complex_desc">Commercial complexes, shop malls, business with branches and business with same activity can create the complex and add the business members into it.</string>
    <string name="app_name">Collect-Up</string>
    <string name="tag_desc">Tagging the Products or Business will help the other users to find your product/services or business,easily</string>
    <string name="action_search">Search</string>
    <string name="action_new_chat">New Chat</string>
    <string name="search_for_shops">Search for businesses</string>
    <string name="search_for_complex">Search for complex</string>
    <string name="male">Male</string>
    <string name="alert_message_pick_location">If you don\'t set your location,the users may not see your product in the nearest places,do you want this?</string>
    <string name="alert_title_pick_location">Warning!</string>
    <string name="alert_positive_pick_location">Yes</string>
    <string name="alert_negetive_pick_location">No</string>
    <string name="stickers">Stickers</string>
    <string name="female">Female</string>
    <string name="add_manager">Edit Managers</string>
    <string name="job">Job</string>
    <string name="languages">Languages</string>
    <string name="change_language">Change Language</string>
    <string name="add_shop">Add Business</string>
    <string name="contacts">Contacts</string>
    <string name="multi_cropper">Setting</string>
    <string name="following">Following</string>
    <string name="add_complex">Add Complex</string>
    <string name="action_done">Done</string>
    <string name="new_event">New Event</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_email_address">Email address</string>
    <string name="action_edit">Edit</string>
    <string name="action_send_message">Send Message</string>
    <string name="send">Send</string>
    <string name="action_delete">Delete</string>
    <string name="new_complex">New Complex</string>
    <string name="pick_location">Pick Location</string>
    <string name="new_shop">New Business</string>
    <string name="pref_version">Collect-Up for Android v%1$s</string>
    <string name="activation_sent">Your activation code will send to %1$s. Please wait a moment to receive the code.</string>
    <string name="hint_activation_code">Code</string>
    <string name="get_start">Get Start</string>
    <string name="check">Check</string>
    <string name="register">Register</string>
    <string name="content_description_cup_logo">Collect-Up logo</string>
    <string name="content_description_open_profile">Open profile activity.</string>
    <string name="content_description_open_home">Open home activity.</string>
    <string name="content_description_open_chat">Open chat activity.</string>
    <string name="content_description_open_shop">Open business activity.</string>
    <string name="content_description_insert_image">Insert image(s).</string>
    <string name="content_description_insert_video">Insert video(s).</string>
    <string name="content_description_like_post">Like post.</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="tag">Tag People</string>
    <string name="hint_choose_your_country">Choose your country</string>
    <string name="invalid_activation_code">Invalid activation code</string>
    <string name="whats_cup">We want to tie virtual into the real world.</string>
    <string name="welcome_to_cup">Welcome to Collect-Up</string>
    <string name="dialog_choose_photo_title">Choose Action</string>
    <string name="toast_update_profile_failed">Updating profile has failed</string>
    <string name="toast_new_complex_failed">Creating new complex has failed</string>
    <string name="hint_address">Address</string>
    <string name="hint_description">Description</string>
    <string name="hint_presentation_code">Presentation code</string>
    <string name="toast_edit_complex_failed">Editing the complex has failed</string>
    <string name="toast_edit_shop_failed">Editing business has failed</string>
    <string name="toast_new_shop_failed">Creating new business has failed</string>
    <string name="toast_set_password_twostep_failed">Set password has failed please try again</string>
    <string name="toast_change_pass_twostep_failed">Change password has failed please try again</string>
    <string name="toast_set_email_twostep_failed">Set email address has failed please try again</string>
    <string name="no_entries">No data yet…!</string>
    <string name="invite_from_sms">%1$s just invited you to join Collect-Up. Download for free at
        %2$s
    </string>
    <string name="invite_friends">Invite Friends</string>
    <string name="set_admin">Set Admin</string>
    <string name="requests">Requests</string>
    <string name="follow">Follow</string>
    <string name="search_for_managers">Search for managers</string>
    <string name="post_likes">Post Likes</string>
    <string name="followers">Followers</string>
    <string name="toast_error_updating_complex">Error in updating the complex</string>
    <string name="action_add_manager">Edit Managers</string>
    <string name="managers">Managers</string>
    <string name="action_set_admin">Set Admin</string>
    <string name="toast_error_updating_shop">Error in updating the business</string>
    <string name="toast_error_forgotpass_twostep">Error in reset your password</string>
    <string name="action_new_event">New Event</string>
    <string name="cancel">Cancel</string>
    <string name="action_add_shops">Add Businesses</string>
    <string name="action_add_post">Add Post</string>
    <string name="business">Business</string>
    <string name="complex">Complex</string>
    <string name="event">Event</string>
    <string name="product">Product</string>
    <string name="chat">Chat</string>
    <string name="action_block_user">Block user</string>
    <string name="content_description_add_new_shop">Add new business.</string>
    <string name="content_description_add_new_complex">Add new complex.</string>
    <string name="content_description_add_new_event">Add new event.</string>
    <string name="content_description_add_new_post">Add new post.</string>
    <string name="content_description_add_new_product">Add new product.</string>
    <string name="post">Post</string>
    <string name="action_add_member">Add member</string>
    <string name="action_edit_group_name">Edit name</string>
    <string name="action_delete_leave">Leave and delete </string>
    <string name="action_change_picture">Change picture</string>
    <string name="action_update_info">Update Info</string>
    <string name="pref_account_settings">Account</string>
    <string name="pref_denied_profiles">Denied Profiles</string>
    <string name="pref_blocked_list">Blocked Users</string>
    <string name="pref_is_private">Is Private</string>
    <string name="is_private_summary">When your account is private, only people you approve can see your posts. Your existing followers and following won\'t be affected.</string>
    <string name="notification_settings">Notifications</string>
    <string name="pref_enable_vibrate">Enable Vibrate</string>
    <string name="pref_enable_sound">Enable Sound</string>
    <string name="pref_manage_notifications">Manage Notifications</string>
    <string name="pref_support">Support</string>
    <string name="help_center">Help Center</string>
    <string name="pref_report_a_problem">Report a Problem</string>
    <string name="pref_deactivate">Deactivate</string>
    <string name="pref_logout">Logout</string>
    <string name="pref_faq">FAQ</string>
    <string name="pref_about">About</string>
    <string name="pref_ads">Ads</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="application">Application</string>
    <string name="pref_mute_chat_notification">Enabled Notifications</string>
    <string name="pref_mute_app_like">Enabled Post Like</string>
    <string name="pref_mute_shop_like">Enabled Business\'s Post Like</string>
    <string name="pref_mute_complex_like">Enabled Complex\'s Post Like</string>
    <string name="pref_mute_comment">Enabled Comment</string>
    <string name="pref_mute_shop_comment">Enabled Business\'s Comment</string>
    <string name="pref_mute_complex_comment">Enabled Complex\'s Comment</string>
    <string name="pref_mute_follow">Enabled Follow</string>
    <string name="pref_mute_shop_follow">Enabled Business\'s Follow</string>
    <string name="pref_mute_complex_follow">Enabled Complex\'s Follow</string>
    <string name="pref_mute_rate_product">Enabled Rate Product</string>
    <string name="pref_mute_rate_shop">Enabled Rate Business</string>
    <string name="pref_mute_rate_complex">Enabled Rate Complex</string>
    <string name="pref_mute_shop_manager">Enabled Business Manager</string>
    <string name="pref_mute_complex_manager">Enabled Complex Manager</string>
    <string name="pref_private_messaging">Private Messaging</string>
    <string name="is_private_messaging_summary">When your messaging is private, only people you approve can send you message. Your existing followers and following won\'t be affected.</string>
    <string name="pref_mute_app_join">Enabled Contact Joined</string>
    <string name="pref_privacy">Account Privacy</string>
    <string name="pref_sessions">Active Sessions</string>
    <string name="pref_twosteps">Two-Step Verification</string>
    <string name="pref_show_username">Show Username</string>
    <string name="pref_show_gender">Show Gender</string>
    <string name="pref_show_job">Show Job</string>
    <string name="pref_show_email">Show Email</string>
    <string name="pref_show_phone_number">Show Phone Number</string>
    <string name="pref_show_birthday">Show Birthday</string>
    <string name="pref_show_location">Show Location</string>
    <string name="pref_show_languages">Show Languages</string>
    <string name="pref_show_biography">Show Biography</string>
    <string name="pref_account_privacy">Account Privacy</string>
    <string name="action_share">Share</string>
    <string name="action_deny_user">Deny User</string>
    <string name="report">Report</string>
    <string name="share_on_profile">Share on profile</string>
    <string name="share_to_chats">Share to chats</string>
</resources>