<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Collect-up  on December 27, 2016.
  ~
  ~ This is the source code of C-Up v1.0
  ~
  ~ Copyright (c) 2016 C-Up. All rights reserved.
  -->

<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_manage_notifications">
    <android.support.v7.preference.PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/chat">
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_chat_notification"
            android:defaultValue="@bool/prefMuteChatNotifications"
            android:key="prefMuteChatNotifications"
            android:title="@string/pref_mute_chat_notification"/>
    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/application">
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_like"
            android:defaultValue="@bool/prefMuteAppLike"
            android:key="prefMuteAppLike"
            android:title="@string/pref_mute_app_like"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_shop_like"
            android:defaultValue="@bool/prefMuteAppShopLike"
            android:key="prefMuteAppShopLike"
            android:title="@string/pref_mute_shop_like"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_complex_like"
            android:defaultValue="@bool/prefMuteAppComplexLike"
            android:key="prefMuteAppComplexLike"
            android:title="@string/pref_mute_complex_like"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_comment"
            android:defaultValue="@bool/prefMuteAppComment"
            android:key="prefMuteAppComment"
            android:title="@string/pref_mute_comment"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_shop_comment"
            android:defaultValue="@bool/prefMuteAppShopComment"
            android:key="prefMuteAppShopComment"
            android:title="@string/pref_mute_shop_comment"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_complex_comment"
            android:defaultValue="@bool/prefMuteAppComplexComment"
            android:key="prefMuteAppComplexComment"
            android:title="@string/pref_mute_complex_comment"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_follow"
            android:defaultValue="@bool/prefMuteAppFollow"
            android:key="prefMuteAppFollow"
            android:title="@string/pref_mute_follow"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_shop_follow"
            android:defaultValue="@bool/prefMuteAppShopFollow"
            android:key="prefMuteAppShopFollow"
            android:title="@string/pref_mute_shop_follow"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_complex_follow"
            android:defaultValue="@bool/prefMuteAppComplexFollow"
            android:key="prefMuteAppComplexFollow"
            android:title="@string/pref_mute_complex_follow"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_rate_product"
            android:defaultValue="@bool/prefMuteAppRateProduct"
            android:key="prefMuteAppRateProduct"
            android:title="@string/pref_mute_rate_product"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_rate_shop"
            android:defaultValue="@bool/prefMuteAppRateShop"
            android:key="prefMuteAppRateShop"
            android:title="@string/pref_mute_rate_shop"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_rate_complex"
            android:defaultValue="@bool/prefMuteAppRateComplex"
            android:key="prefMuteAppRateComplex"
            android:title="@string/pref_mute_rate_complex"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_shop_manager"
            android:defaultValue="@bool/prefMuteAppShopManager"
            android:key="prefMuteAppShopManager"
            android:title="@string/pref_mute_shop_manager"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_complex_manager"
            android:defaultValue="@bool/prefMuteAppComplexManager"
            android:key="prefMuteAppComplexManager"
            android:title="@string/pref_mute_complex_manager"/>
        <SwitchPreferenceCompat
            android:id="@+id/pref_mute_app_join"
            android:defaultValue="@bool/prefMuteAppJoin"
            android:key="prefMuteAppJoin"
            android:title="@string/pref_mute_app_join"/>
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>