<!--
  ~ Created by Collect-up  on December 27, 2016.
  ~
  ~ This is the source code of C-Up v1.0
  ~
  ~ Copyright (c) 2016 C-Up. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".fragments.FragmentGroupChatInfo">
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit_group_name"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_change_picture"
        android:title="@string/action_change_picture"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_member"
        android:title="@string/action_add_member"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_leave"
        android:title="@string/action_delete_leave"
        app:showAsAction="never"/>
</menu>
