<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Collect-up  on December 27, 2016.
  ~
  ~ This is the source code of C-Up v1.0
  ~
  ~ Copyright (c) 2016 C-Up. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="6dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageButton
            android:id="@+id/image_button_new_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sheet_menu_add_post"
            android:contentDescription="@string/content_description_add_new_post" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/post"
            android:textColor="@color/divider" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageButton
            android:id="@+id/image_button_new_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sheet_menu_add_product"
            android:contentDescription="@string/content_description_add_new_product" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/product"
            android:textColor="@color/divider" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageButton
            android:id="@+id/image_button_new_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sheet_menu_add_shop"
            android:contentDescription="@string/content_description_add_new_shop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/business"
            android:textColor="@color/divider" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageButton
            android:id="@+id/image_button_new_complex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sheet_menu_add_complex"
            android:contentDescription="@string/content_description_add_new_complex" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/complex"
            android:textColor="@color/divider" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageButton
            android:id="@+id/image_button_new_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sheet_menu_add_event"
            android:contentDescription="@string/content_description_add_new_event" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/event"
            android:textColor="@color/divider" />
    </LinearLayout>
</LinearLayout>