<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Collect-up  on December 27, 2016.
  ~
  ~ This is the source code of C-Up v1.0
  ~
  ~ Copyright (c) 2016 C-Up. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".PersonActivity">
    <group android:id="@+id/menu_group_hide">
        <item
            android:id="@+id/action_send_message"
            android:icon="@drawable/ic_message_text_24"
            android:title="@string/action_send_message"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/action_deny"
            android:title="@string/action_deny_user"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_block"
            android:title="@string/action_block_user"
            app:showAsAction="never"/>

    </group>
</menu>